fixed product page width on mobile

--- a/css/product.css
+++ b/css/product.css
@@ -192,7 +192,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  margin-left: 24px;
 }
 
 .producer {
