--- a/css/responsiveProduct.css
+++ b/css/responsiveProduct.css
@@ -101,6 +101,7 @@
 
   .illustration2 {
     width: 80%;
+    margin-left: 24px;
   }
 
   .producer {
